--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -18,6 +18,9 @@
 
   --nav-height: 60px;
 
+  --project-overview-size: 94vw;
+  --project-nav-animation-duration: 1s;
+
   --bullet-size: 5px;
   --bubble-size: 44px;
 
