--- a/src/components/bubble/bubble.css
+++ b/src/components/bubble/bubble.css
@@ -9,11 +9,26 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity: 0;
+  transition: all 0.6s !important;
+  outline: none;
+
   z-index: var(--bubble-z-index);
-  transition: opacity 0.3s;
+  opacity: 0;
+  visibility: hidden;
 }
 
-.bubble-visible {
+.bubble.bubble-visible {
   opacity: 1;
+  visibility: visible;
+}
+
+.bubble img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .bubble:focus-visible {
+    outline: auto;
+  }
 }
