fix: MagicMouse for ssr

--- a/src/styles/magic-mouse.css
+++ b/src/styles/magic-mouse.css
@@ -63,7 +63,7 @@ body * {
   cursor: none;
 }
 
-@media screen and (min-width: 768px) {
+@media (pointer: fine) {
   body #magicPointer::before,
   body #magicPointer::after {
     display: block;
