--- a/src/components/menu/menu-screen.css
+++ b/src/components/menu/menu-screen.css
@@ -1,7 +1,7 @@
 .menu-screen {
   width: 100%;
-  height: 100vh;
-  overflow-y: hidden;
+  height: 100%;
+  overflow: hidden;
   position: absolute;
   display: flex;
   flex-direction: column;
