--- a/src/components/project-slider/project.css
+++ b/src/components/project-slider/project.css
@@ -1,8 +1,8 @@
 .project {
-  min-height: 100vh;
   height: 100%;
   width: var(--project-overview-size);
-  display: inline-block;
+  display: inline-flex;
+  flex-direction: column;
   font-size: 1rem;
   overflow: hidden;
   position: relative;
@@ -17,12 +17,14 @@
 .project .project-info-container {
   display: flex;
   max-width: 72vw;
+  min-height: 224px;
+  flex: 1 1 224px;
 }
 
 .project .project-image {
   width: 72vw;
-  height: 330px;
-  margin-top: 89px;
+  flex: 1 1 100%;
+  margin-top: calc(var(--nav-height) + 30px);
   transform: translateX(-24px);
   transition: transform 1s;
   background-repeat: no-repeat;
@@ -66,7 +68,7 @@
   display: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 900px) {
   .project .project-number {
     display: flex;
     position: absolute;
@@ -77,7 +79,7 @@
   .project .project-info-container {
     position: absolute;
     top: calc(var(--nav-height) + 25%);
-    left: calc(94vw * 3 / 4);
+    left: calc((100% - 486px) / 2 - 10% + 486px - 76px);
     flex-direction: column;
     max-width: 100%;
   }
@@ -94,7 +96,7 @@
     margin: 0;
     position: absolute;
     top: 0;
-    left: calc((100% - 486px) / 2 - 12%);
+    left: calc((100% - 486px) / 2 - 9%);
   }
 
   .project-info .project-date {
